made the swagger.json works
